# prepc-team-project

./: CMakeLists.txt  Makefile  README.md
drafts/: notes  questions.txt  stepik_sqlite  tasks.txt
project/include/: database.h  sql_queries.h
project/src/: database.cpp
